[gd_scene load_steps=8 format=3 uid="uid://b53mvnssrkdev"]

[ext_resource type="Script" path="res://scenes/level_one.gd" id="1_gp1wv"]
[ext_resource type="FontFile" uid="uid://bidxbkni4uqjt" path="res://fonts/Aldrich-Regular.ttf" id="1_uemhy"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_gogdv"]
b = Vector2(1920, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_igblk"]
b = Vector2(0, 1080)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_gq783"]
b = Vector2(-1920, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_4jmp2"]
b = Vector2(0, 1080)

[sub_resource type="LabelSettings" id="LabelSettings_ufygh"]
font = ExtResource("1_uemhy")
font_size = 64

[node name="LevelOne" type="Node2D"]
script = ExtResource("1_gp1wv")

[node name="Members" type="Node2D" parent="."]
process_mode = 1

[node name="Walls" type="Node2D" parent="."]

[node name="TopWall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopWall"]
shape = SubResource("SegmentShape2D_gogdv")

[node name="RightWall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
position = Vector2(1920, 0)
shape = SubResource("SegmentShape2D_igblk")

[node name="BottomWall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BottomWall"]
position = Vector2(1920, 1080)
shape = SubResource("SegmentShape2D_gq783")

[node name="LeftWall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
shape = SubResource("SegmentShape2D_4jmp2")

[node name="CountdownLabel" type="Label" parent="."]
process_mode = 3
offset_right = 1920.0
offset_bottom = 1080.0
text = "3"
label_settings = SubResource("LabelSettings_ufygh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
